# ChessEngine

./: .gitignore  CMakeLists.txt  check.sh  cleanRandom.sh  display.sh
src/: main.cc
src/AI/: mcts.cc  mcts.hh  uci.cc  uci.hh
src/Board/: board.cc  board.hh
src/Pieces/: bishop.cc  bishop.hh  king.cc  king.hh  knight.cc  knight.hh  pawn.cc  pawn.hh  piece.hh  queen.cc  queen.hh  rook.cc  rook.hh
test/: displayfen.py  requirement.txt  test.py
test/test_files/: base.perft  basic.perft  castling_base.perft  castling_error.perft  check_promotion.perft  edwards_1.perft  forbidden_castle.perft  kak.perft  kiwipete.perft  mat.perft  nine_eleven.perft  pawn_vs_rook.perft  position3.perft  position4.perft  protect_the_king.perft  run_my_king.perft
